--- a/resources/css/default.css
+++ b/resources/css/default.css
@@ -583,3 +583,11 @@ input[type="button"] {
 .title {
     cursor: pointer;
 }
+
+/*********************************************************************************/
+/* About                                                                          */
+/*********************************************************************************/
+
+.about p{
+    font-size: 20px;
+}
